style home page

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -553,6 +553,10 @@ video {
   margin-top: 1rem;
 }
 
+.mt-7 {
+  margin-top: 1.75rem;
+}
+
 .block {
   display: block;
 }
@@ -745,6 +749,10 @@ video {
 
 .gap-44 {
   gap: 11rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .overflow-y-auto {
